<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_grid"
            android:layout_marginStart="@dimen/double_grid"
            android:layout_marginEnd="@dimen/double_grid"
            android:text="@string/act_main_title"
            android:textSize="@dimen/header_text_size"
            android:textColor="@color/primaryText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_grid"
            android:layout_marginStart="@dimen/double_grid"
            android:layout_marginEnd="@dimen/double_grid"
            android:text="@string/act_main_description"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/secondaryText"
            app:layout_constraintTop_toBottomOf="@id/txtTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txtRequest1Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_grid"
            android:layout_marginStart="@dimen/double_grid"
            android:layout_marginEnd="@dimen/double_grid"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/primaryText"
            android:text="@string/act_main_request_1_title"
            app:layout_constraintTop_toBottomOf="@id/txtDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            />

        <TextView
            android:id="@+id/txtRequest1Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_grid"
            android:layout_marginStart="@dimen/double_grid"
            android:layout_marginEnd="@dimen/double_grid"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/secondaryText"
            android:text="@string/act_main_default_string"
            tools:text="@tools:sample/lorem"
            app:layout_constraintTop_toBottomOf="@id/txtRequest1Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            />

        <ProgressBar
            android:id="@+id/pbRequest1"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_grid"
            android:layout_marginStart="@dimen/double_grid"
            app:layout_constraintTop_toBottomOf="@id/txtRequest1Title"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtRequest2Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_grid"
            app:layout_goneMarginTop="@dimen/act_main_txt_gone_margin"
            android:layout_marginStart="@dimen/double_grid"
            android:layout_marginEnd="@dimen/double_grid"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/primaryText"
            android:text="@string/act_main_request_2_title"
            app:layout_constraintTop_toBottomOf="@id/txtRequest1Content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            />

        <TextView
            android:id="@+id/txtRequest2Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_grid"
            android:layout_marginStart="@dimen/double_grid"
            android:layout_marginEnd="@dimen/double_grid"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/secondaryText"
            android:text="@string/act_main_default_string"
            tools:text="@tools:sample/lorem"
            app:layout_constraintTop_toBottomOf="@id/txtRequest2Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            android:visibility="gone"
            />

        <ProgressBar
            android:id="@+id/pbRequest2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_grid"
            android:layout_marginStart="@dimen/double_grid"
            app:layout_constraintTop_toBottomOf="@id/txtRequest2Title"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/txtRequest3Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_grid"
            app:layout_goneMarginTop="@dimen/act_main_txt_gone_margin"
            android:layout_marginStart="@dimen/double_grid"
            android:layout_marginEnd="@dimen/double_grid"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/primaryText"
            android:text="@string/act_main_request_3_title"
            app:layout_constraintTop_toBottomOf="@id/txtRequest2Content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            />

        <TextView
            android:id="@+id/txtRequest3Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_grid"
            android:layout_marginStart="@dimen/double_grid"
            android:layout_marginEnd="@dimen/double_grid"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/secondaryText"
            android:text="@string/act_main_default_string"
            tools:text="@tools:sample/lorem"
            app:layout_constraintTop_toBottomOf="@id/txtRequest3Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            />

        <ProgressBar
            android:id="@+id/pbRequest3"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_grid"
            android:layout_marginStart="@dimen/double_grid"
            app:layout_constraintTop_toBottomOf="@id/txtRequest3Title"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
